[RPP] Add tests for insight sorting
Also "help" sorting by INP savings in the case where there is no
observed INP, by using a default INP score for purposes of normalizing
estimated savings.

Bug: 368135130
Change-Id: I5d396ecca8758ab39c86916b5e708f8a213143ef
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6094001
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -50,6 +50,7 @@ ts_library("unittests") {
 
   sources = [
     "CLSCulprits.test.ts",
+    "Common.test.ts",
     "DOMSize.test.ts",
     "DocumentLatency.test.ts",
     "FontDisplay.test.ts",
@@ -59,6 +60,7 @@ ts_library("unittests") {
     "LCPPhases.test.ts",
     "RenderBlocking.test.ts",
     "SlowCSSSelector.test.ts",
+    "Statistics.test.ts",
     "ThirdParties.test.ts",
     "Viewport.test.ts",
   ]
