--- a/test/e2e/emulation/BUILD.gn
+++ b/test/e2e/emulation/BUILD.gn
@@ -7,6 +7,7 @@ import("../../../scripts/build/typescript/typescript.gni")
 node_ts_library("emulation") {
   sources = [
     "custom-devices_test.ts",
+    "disable-device-mode_test.ts",
     "dual-screen_test.ts",
     "foldable-device_test.ts",
     "media-query-inspector_test.ts",
