[AI Assistance] Add experimental workspace agent
Not intended to be used outside of internal tester groups
and not enabled by default.

Bug: 385082492
Change-Id: I705dd9ee48fe6ccec3b373a2d9fbc76ea45e6551
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6097889
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1161,6 +1161,7 @@ grd_files_debug_sources = [
   "front_end/panels/ai_assistance/agents/AiAgent.js",
   "front_end/panels/ai_assistance/agents/FileAgent.js",
   "front_end/panels/ai_assistance/agents/NetworkAgent.js",
+  "front_end/panels/ai_assistance/agents/PatchAgent.js",
   "front_end/panels/ai_assistance/agents/PerformanceAgent.js",
   "front_end/panels/ai_assistance/agents/StylingAgent.js",
   "front_end/panels/ai_assistance/aiAssistancePanel.css.js",
