--- a/front_end/panels/ai_assistance/BUILD.gn
+++ b/front_end/panels/ai_assistance/BUILD.gn
@@ -26,6 +26,7 @@ devtools_module("ai_assistance") {
     "agents/AiAgent.ts",
     "agents/FileAgent.ts",
     "agents/NetworkAgent.ts",
+    "agents/PatchAgent.ts",
     "agents/PerformanceAgent.ts",
     "agents/StylingAgent.ts",
     "components/ChatView.ts",
@@ -40,6 +41,7 @@ devtools_module("ai_assistance") {
     "../../core/root:bundle",
     "../../models/bindings:bundle",
     "../../models/logs:bundle",
+    "../../models/text_utils:bundle",
     "../../models/trace:bundle",
     "../../models/workspace:bundle",
     "../../panels/elements:bundle",
