[RPP] Speed up flows handler
By checking that we only assign events to flows once given a flow
binding tuple (a token that allows us to match events to flows,
consisting of the event's ts, cat, pid and tid).

Perfetto's trace event format [1] only considers the first event that
matches a given binding before assigning an event to a flow. By being
consistent with this behavior we are able to skip subsequent events with
a matching binding and save quite some time on traces with many repeated
flow binding tuples.

To prevent further regressions, added a perf test case that consistently
fails on the previous state.

[1] https://docs.google.com/document/d/1CvAClvFfyA5R-PhYUmn5OOQtYMH4h6I0nSsKchNAySU/preview?tab=t.0#heading=h.4qqub5rv9ybk

Fixed: 382545507
Change-Id: I33d0ab6e167549a6499eaf6499b5a5f10d777336
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6097891
Auto-Submit: Andres Olivares <andoli@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -20,6 +20,7 @@ copy_to_gen("traces") {
     "cls-multiple-frames.json.gz",
     "cls-no-nav.json.gz",
     "cls-single-frame.json.gz",
+    "dom-size-long.json.gz",
     "dom-size.json.gz",
     "enhanced-traces.json.gz",
     "extension-tracks-and-marks.json.gz",
