--- a/front_end/ui/legacy/BUILD.gn
+++ b/front_end/ui/legacy/BUILD.gn
@@ -34,12 +34,10 @@ generate_css("legacy_css_files") {
     "listWidget.css",
     "popover.css",
     "progressIndicator.css",
-    "radioButton.css",
     "remoteDebuggingTerminatedScreen.css",
     "reportView.css",
     "rootView.css",
     "searchableView.css",
-    "slider.css",
     "smallBubble.css",
     "softContextMenu.css",
     "softDropDown.css",
@@ -90,7 +88,6 @@ devtools_module("ui") {
     "Fragment.ts",
     "Geometry.ts",
     "GlassPane.ts",
-    "HistoryInput.ts",
     "Infobar.ts",
     "InplaceEditor.ts",
     "InspectorView.ts",
@@ -172,6 +169,8 @@ devtools_entrypoint("bundle") {
     "../../testing/*",
     "../components/data_grid:*",
     "../components/docs/performance_panel/*",
+    "../components/docs/radio_button/*",
+    "../components/docs/slider/*",
     "../components/issue_counter:unittests",
     "../components/legacy_wrapper:*",
     "../components/linear_memory_inspector:*",
