--- a/front_end/ui/lit-html/BUILD.gn
+++ b/front_end/ui/lit-html/BUILD.gn
@@ -8,7 +8,7 @@ import("../../../scripts/build/typescript/typescript.gni")
 import("./visibility.gni")
 
 devtools_module("lit-html") {
-  sources = [ "static.ts" ]
+  sources = [ "i18n-template.ts" ]
 
   deps = [
     "../../core/i18n:bundle",
@@ -37,7 +37,7 @@ devtools_entrypoint("bundle") {
 ts_library("unittests") {
   testonly = true
 
-  sources = [ "static.test.ts" ]
+  sources = [ "i18n-template.test.ts" ]
 
   deps = [ ":bundle" ]
 }
