RPP: select the event when an annotation label is clicked
With this CL when a user clicks on an annotation label in the timeline
we now will select the associated entry. This is a useful change because
when the event is small it can be hard to select, especially when zoomed
out. But the label is always going to be (relatively) large compared to
the event, so let's allow them to click the label.

Bug: 383120286
Fixed: 388224764
Change-Id: Ia58c2ffd8e075087480e651e31e0fea186039a54
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6148172
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/test/interactions/panels/performance/timeline/BUILD.gn
+++ b/test/interactions/panels/performance/timeline/BUILD.gn
@@ -7,6 +7,7 @@ import("../../../../../scripts/build/typescript/typescript.gni")
 node_ts_library("timeline") {
   sources = [
     "animations_track_test.ts",
+    "annotations_test.ts",
     "auction_worklets_tracks_test.ts",
     "flamechart_test.ts",
     "gpu_track_test.ts",
