Add calibrated CPU throttling presets
Adds two CPU throttling presets - low-tier mobile and mid-tier mobile - and a calibration process that determines the best throttling rate to
match the given preset.

The calibration process uses a benchmark and experimentally adjusts the
applied CPU throttling to discover the rate that produces the most
similar results.

See go/cpq:adaptive-throttling for more detail.

Bug: 311438112
Change-Id: Iee049f6c8e9c33ec1dee9799eeb8e370c32d9f0a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6151074
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1516,6 +1516,7 @@ grd_files_debug_sources = [
   "front_end/panels/media/playerListView.css.js",
   "front_end/panels/media/playerMessagesView.css.js",
   "front_end/panels/media/playerPropertiesView.css.js",
+  "front_end/panels/mobile_throttling/CalibrationController.js",
   "front_end/panels/mobile_throttling/MobileThrottlingSelector.js",
   "front_end/panels/mobile_throttling/NetworkPanelIndicator.js",
   "front_end/panels/mobile_throttling/NetworkThrottlingSelector.js",
