--- a/front_end/panels/mobile_throttling/BUILD.gn
+++ b/front_end/panels/mobile_throttling/BUILD.gn
@@ -14,6 +14,7 @@ generate_css("css_files") {
 
 devtools_module("mobile_throttling") {
   sources = [
+    "CalibrationController.ts",
     "MobileThrottlingSelector.ts",
     "NetworkPanelIndicator.ts",
     "NetworkThrottlingSelector.ts",
