--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -47,6 +47,7 @@ copy_to_gen("traces") {
     "large-recalc-style.json.gz",
     "lcp-images-rasterizer.json.gz",
     "lcp-images.json.gz",
+    "lcp-late-paint-event.json.gz",
     "lcp-multiple-frames.json.gz",
     "lcp-web-font.json.gz",
     "load-simple.json.gz",
