--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "22.9.3",
     "@types/rimraf": "3.0.2",
     "@types/sinon": "17.0.3",
+    "@types/yargs": "17.0.33",
     "@types/webidl2": "23.13.6",
     "@types/wicg-task-scheduling": "2024.1.0",
     "@typescript-eslint/eslint-plugin": "8.18.2",
