e2e: add test that imports a stored trace file
We have e2e tests for live recordings, but I wanted to add one for a
saved file too.

Bug: none
Change-Id: Ie951551299aa780daaf8939d6d55a8bd9594862d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6168858
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>

--- a/test/e2e/resources/performance/BUILD.gn
+++ b/test/e2e/resources/performance/BUILD.gn
@@ -16,6 +16,7 @@ copy_to_gen("performance") {
     "selectorStats/page-with-style.css",
     "selectorStats/page-with-style.html",
     "timeline/treeView-test-trace.json",
+    "timeline/web.dev-trace.json.gz",
     "wasm/mainWasm_profile.json",
     "wasm/profiling.html",
     "wasm/profiling.wasm",
