--- a/front_end/panels/protocol_monitor/components/BUILD.gn
+++ b/front_end/panels/protocol_monitor/components/BUILD.gn
@@ -8,17 +8,11 @@ import("../../../../scripts/build/ninja/generate_css.gni")
 import("../../../../scripts/build/typescript/typescript.gni")
 
 generate_css("css_files") {
-  sources = [
-    "JSONEditor.css",
-    "toolbar.css",
-  ]
+  sources = [ "JSONEditor.css" ]
 }
 
 devtools_module("components") {
-  sources = [
-    "JSONEditor.ts",
-    "Toolbar.ts",
-  ]
+  sources = [ "JSONEditor.ts" ]
 
   deps = [
     "../../../core/host:bundle",
