[node_app] Fix Node.js connection page icon
The node_app icon is broken.

Fixed: 390150759
Change-Id: I4fed38e2ce09d659d95c36e6787aaa0840178f8a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6175238
Reviewed-by: Yang Guo <yangguo@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -207,6 +207,7 @@ grd_files_release_sources = [
   "front_end/Images/navigationControls.png",
   "front_end/Images/navigationControls_2x.png",
   "front_end/Images/network-settings.svg",
+  "front_end/Images/node-stack-icon.svg",
   "front_end/Images/nodeIcon.avif",
   "front_end/Images/open-externally.svg",
   "front_end/Images/override.svg",
