[RPP] Create 3p table in summary pane
This is the first pass on the table, it uses the trace's entityMapper
data to create the summaries. Additional table features will be added
in follow ups

https://screencast.googleplex.com/cast/NDYwNjAxNzQ3OTM3Njg5NnwzM2FmZmRmOC0zMg

Bug:383567961
Change-Id: I11e37f9bddcb5e0cf8ceab355d16a69de8f32245
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6100546
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -74,6 +74,7 @@ devtools_module("timeline") {
     "SaveFileFormatter.ts",
     "ServerTimingsTrackAppender.ts",
     "TargetForEvent.ts",
+    "ThirdPartyTreeView.ts",
     "ThreadAppender.ts",
     "TimelineController.ts",
     "TimelineDetailsView.ts",
