--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1797,6 +1797,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/SaveFileFormatter.js",
   "front_end/panels/timeline/ServerTimingsTrackAppender.js",
   "front_end/panels/timeline/TargetForEvent.js",
+  "front_end/panels/timeline/ThirdPartyTreeView.js",
   "front_end/panels/timeline/ThreadAppender.js",
   "front_end/panels/timeline/TimelineController.js",
   "front_end/panels/timeline/TimelineDetailsView.js",
