--- a/front_end/panels/protocol_monitor/BUILD.gn
+++ b/front_end/panels/protocol_monitor/BUILD.gn
@@ -9,34 +9,46 @@ import("../../../scripts/build/typescript/typescript.gni")
 import("../visibility.gni")
 
 generate_css("css_files") {
-  sources = [ "protocolMonitor.css" ]
+  sources = [
+    "JSONEditor.css",
+    "protocolMonitor.css",
+  ]
 }
 
 devtools_module("protocol_monitor") {
-  sources = [ "ProtocolMonitor.ts" ]
+  sources = [
+    "JSONEditor.ts",
+    "ProtocolMonitor.ts",
+  ]
 
   deps = [
+    ":css_files",
+    "../../core/common:bundle",
     "../../core/host:bundle",
     "../../core/i18n:bundle",
+    "../../core/platform:bundle",
     "../../core/protocol_client:bundle",
     "../../core/sdk:bundle",
+    "../../models/bindings:bundle",
     "../../models/text_utils:bundle",
+    "../../panels/elements/components:bundle",
+    "../../ui/components/buttons:bundle",
     "../../ui/components/data_grid:bundle",
+    "../../ui/components/dialogs:bundle",
     "../../ui/components/icon_button:bundle",
+    "../../ui/components/menus:bundle",
+    "../../ui/components/suggestion_input:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/source_frame:bundle",
     "../../ui/lit-html:bundle",
-    "./components:bundle",
+    "../../ui/visual_logging:bundle",
   ]
 }
 
 devtools_entrypoint("bundle") {
   entrypoint = "protocol_monitor.ts"
 
-  deps = [
-    ":css_files",
-    ":protocol_monitor",
-  ]
+  deps = [ ":protocol_monitor" ]
 
   visibility = [
     ":*",
@@ -62,11 +74,13 @@ devtools_entrypoint("meta") {
 ts_library("unittests") {
   testonly = true
 
-  sources = [ "ProtocolMonitor.test.ts" ]
+  sources = [
+    "JSONEditor.test.ts",
+    "ProtocolMonitor.test.ts",
+  ]
 
   deps = [
     ":bundle",
     "../../testing",
-    "./components:bundle",
   ]
 }
