[scopes] Build OriginalScope tree from pasta scopes
This CL extracts parts of https://crrev.com/c/5774044 and lands them
standalone so we can use it for pasta source maps as well.

Bloomberg pasta scopes (https://github.com/bloomberg/pasta-sourcemaps/blob/main/spec.md)
and "Scopes" proposal scopes currently use two different data
structures internally. To reduce code duplication, we add a function
"buildScopeTree" that can turn pasta function ranges into an
"OriginalScope" tree.

This allows us to create a "SourceMapScopesInfo" from a pasta
source map. It'll only have original scopes without generated ranges,
but thats enough to resolve original function names in most cases.

A follow-up CL will use the new function and remove one of the scope
data structures.

Note: The proposed extension API in https://crrev.com/c/5774044 is
basically the "x_com_bloomberg_sourcesFunctionMappings" field
decoded and passed across the extension boundary.

R=pfaffe@chromium.org

Co-authored-by: elormcoch@microsoft.com
Bug: 389857436
Change-Id: Ie6bde15e89160452c425588097a66cbdf10ebd05
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6174726
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>

--- a/front_end/core/sdk/BUILD.gn
+++ b/front_end/core/sdk/BUILD.gn
@@ -80,6 +80,7 @@ devtools_module("sdk") {
     "ServiceWorkerCacheModel.ts",
     "ServiceWorkerManager.ts",
     "SourceMap.ts",
+    "SourceMapFunctionRanges.ts",
     "SourceMapManager.ts",
     "SourceMapScopeChainEntry.ts",
     "SourceMapScopes.ts",
@@ -171,6 +172,7 @@ ts_library("unittests") {
     "ServiceWorkerCacheModel.test.ts",
     "ServiceWorkerManager.test.ts",
     "SourceMap.test.ts",
+    "SourceMapFunctionRanges.test.ts",
     "SourceMapManager.test.ts",
     "SourceMapScopeChainEntry.test.ts",
     "SourceMapScopes.test.ts",
