--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -897,6 +897,7 @@ grd_files_debug_sources = [
   "front_end/core/sdk/ServiceWorkerCacheModel.js",
   "front_end/core/sdk/ServiceWorkerManager.js",
   "front_end/core/sdk/SourceMap.js",
+  "front_end/core/sdk/SourceMapFunctionRanges.js",
   "front_end/core/sdk/SourceMapManager.js",
   "front_end/core/sdk/SourceMapScopeChainEntry.js",
   "front_end/core/sdk/SourceMapScopes.js",
