[GM3Restyling] Update run command menu
Also add a script that given an image name adds required image paths to
devtools_image_files.gni and devtools_grd_files.gni

Screenshot: https://imgur.com/a/MaU8tFD

Bug: 325442580
Change-Id: I13d1af601c5534507f5303608fc28faf612c7d3a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170727
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -153,8 +153,10 @@ devtools_svg_sources = [
   "gear-filled.svg",
   "gear.svg",
   "gears.svg",
+  "global.svg",
   "google.svg",
   "goto-filled.svg",
+  "grid-on.svg",
   "group.svg",
   "heap-snapshot.svg",
   "heap-snapshots.svg",
@@ -183,8 +185,10 @@ devtools_svg_sources = [
   "justify-items-start.svg",
   "justify-items-stretch.svg",
   "keyboard-arrow-right.svg",
+  "keyboard-full.svg",
   "keyboard-pen.svg",
   "keyboard.svg",
+  "label.svg",
   "large-arrow-right-filled.svg",
   "layers-filled.svg",
   "layers.svg",
@@ -204,6 +208,8 @@ devtools_svg_sources = [
   "mouse.svg",
   "network-settings.svg",
   "open-externally.svg",
+  "override.svg",
+  "palette.svg",
   "pause-circle.svg",
   "pause.svg",
   "pen-spark.svg",
@@ -213,6 +219,7 @@ devtools_svg_sources = [
   "performance-panel-time-range.svg",
   "performance.svg",
   "person.svg",
+  "photo-camera.svg",
   "play.svg",
   "plus.svg",
   "policy.svg",
@@ -254,10 +261,12 @@ devtools_svg_sources = [
   "symbol.svg",
   "sync.svg",
   "table.svg",
+  "terminal.svg",
   "thumb-down-filled.svg",
   "thumb-down.svg",
   "thumb-up-filled.svg",
   "thumb-up.svg",
+  "tonality.svg",
   "top-panel-close.svg",
   "top-panel-open.svg",
   "touch-app.svg",
