--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -151,8 +151,10 @@ grd_files_release_sources = [
   "front_end/Images/gear-filled.svg",
   "front_end/Images/gear.svg",
   "front_end/Images/gears.svg",
+  "front_end/Images/global.svg",
   "front_end/Images/google.svg",
   "front_end/Images/goto-filled.svg",
+  "front_end/Images/grid-on.svg",
   "front_end/Images/group.svg",
   "front_end/Images/heap-snapshot.svg",
   "front_end/Images/heap-snapshots.svg",
@@ -181,8 +183,10 @@ grd_files_release_sources = [
   "front_end/Images/justify-items-start.svg",
   "front_end/Images/justify-items-stretch.svg",
   "front_end/Images/keyboard-arrow-right.svg",
+  "front_end/Images/keyboard-full.svg",
   "front_end/Images/keyboard-pen.svg",
   "front_end/Images/keyboard.svg",
+  "front_end/Images/label.svg",
   "front_end/Images/large-arrow-right-filled.svg",
   "front_end/Images/layers-filled.svg",
   "front_end/Images/layers.svg",
@@ -205,6 +209,8 @@ grd_files_release_sources = [
   "front_end/Images/network-settings.svg",
   "front_end/Images/nodeIcon.avif",
   "front_end/Images/open-externally.svg",
+  "front_end/Images/override.svg",
+  "front_end/Images/palette.svg",
   "front_end/Images/pause-circle.svg",
   "front_end/Images/pause.svg",
   "front_end/Images/pen-spark.svg",
@@ -214,6 +220,7 @@ grd_files_release_sources = [
   "front_end/Images/performance-panel-time-range.svg",
   "front_end/Images/performance.svg",
   "front_end/Images/person.svg",
+  "front_end/Images/photo-camera.svg",
   "front_end/Images/play.svg",
   "front_end/Images/plus.svg",
   "front_end/Images/policy.svg",
@@ -256,10 +263,12 @@ grd_files_release_sources = [
   "front_end/Images/symbol.svg",
   "front_end/Images/sync.svg",
   "front_end/Images/table.svg",
+  "front_end/Images/terminal.svg",
   "front_end/Images/thumb-down-filled.svg",
   "front_end/Images/thumb-down.svg",
   "front_end/Images/thumb-up-filled.svg",
   "front_end/Images/thumb-up.svg",
+  "front_end/Images/tonality.svg",
   "front_end/Images/toolbarResizerVertical.png",
   "front_end/Images/top-panel-close.svg",
   "front_end/Images/top-panel-open.svg",
