--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -191,6 +191,7 @@ ts_library("unittests") {
     "Initiators.test.ts",
     "ModificationsManager.test.ts",
     "SaveFileFormatter.test.ts",
+    "ThirdPartyTreeView.test.ts",
     "TimelineController.test.ts",
     "TimelineDetailsView.test.ts",
     "TimelineFilters.test.ts",
