[DOMStats] Add DOM stats to sidebar insight
This does not include element links yet.

https://screenshot.googleplex.com/JqnQRp97zxj8XGD

Bug: 372897811
Change-Id: I5a2a5d47bbfa8d32e3b05e9064243d245227ca53
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6172395
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -13,6 +13,7 @@ devtools_module("handlers") {
     "AnimationHandler.ts",
     "AsyncJSCallsHandler.ts",
     "AuctionWorkletsHandler.ts",
+    "DOMStatsHandler.ts",
     "ExtensionTraceDataHandler.ts",
     "FlowsHandler.ts",
     "FramesHandler.ts",
@@ -73,6 +74,7 @@ ts_library("unittests") {
     "AnimationHandler.test.ts",
     "AsyncJSCallsHandler.test.ts",
     "AuctionWorkletsHandler.test.ts",
+    "DOMStatsHandler.test.ts",
     "ExtensionTraceDataHandler.test.ts",
     "FlowsHandler.test.ts",
     "FramesHandler.test.ts",
