--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1066,6 +1066,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/handlers/AnimationHandler.js",
   "front_end/models/trace/handlers/AsyncJSCallsHandler.js",
   "front_end/models/trace/handlers/AuctionWorkletsHandler.js",
+  "front_end/models/trace/handlers/DOMStatsHandler.js",
   "front_end/models/trace/handlers/ExtensionTraceDataHandler.js",
   "front_end/models/trace/handlers/FlowsHandler.js",
   "front_end/models/trace/handlers/FramesHandler.js",
