--- a/front_end/ui/legacy/BUILD.gn
+++ b/front_end/ui/legacy/BUILD.gn
@@ -50,6 +50,7 @@ generate_css("legacy_css_files") {
     "textPrompt.css",
     "themeColors.css",
     "tokens.css",
+    "toolbar.css",
     "treeoutline.css",
     "viewContainers.css",
   ]
