Wrap UI.DataGrid into a web component and migrate developer resources to it
Bug: 390346490
Change-Id: I55eed34f835d436ae3ec08e432a40ab26e6fd19c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6171004
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2372,6 +2372,7 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/cookie_table/CookiesTable.js",
   "front_end/ui/legacy/components/cookie_table/cookiesTable.css.js",
   "front_end/ui/legacy/components/data_grid/DataGrid.js",
+  "front_end/ui/legacy/components/data_grid/DataGridElement.js",
   "front_end/ui/legacy/components/data_grid/DataGridWithPreview.js",
   "front_end/ui/legacy/components/data_grid/ShowMoreDataGridNode.js",
   "front_end/ui/legacy/components/data_grid/SortableDataGrid.js",
