--- a/front_end/ui/legacy/components/data_grid/BUILD.gn
+++ b/front_end/ui/legacy/components/data_grid/BUILD.gn
@@ -14,6 +14,7 @@ generate_css("css_files") {
 devtools_module("data_grid") {
   sources = [
     "DataGrid.ts",
+    "DataGridElement.ts",
     "DataGridWithPreview.ts",
     "ShowMoreDataGridNode.ts",
     "SortableDataGrid.ts",
@@ -60,6 +61,7 @@ ts_library("unittests") {
 
   sources = [
     "DataGrid.test.ts",
+    "DataGridElement.test.ts",
     "DataGridWithPreview.test.ts",
   ]
 
