Use `<devtools-new-data-grid>` in `EndpointsGrid`.
Bug: 390346490
Change-Id: I5772e9131c65739102ab382c714c2690c3e7e8c3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6179488
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/application/components/BUILD.gn
+++ b/front_end/panels/application/components/BUILD.gn
@@ -70,6 +70,7 @@ devtools_module("components") {
     "../../../ui/components/text_prompt:bundle",
     "../../../ui/components/tree_outline:bundle",
     "../../../ui/legacy:bundle",
+    "../../../ui/legacy/components/data_grid:bundle",
     "../../../ui/legacy/components/source_frame:bundle",
     "../../../ui/legacy/components/utils:bundle",
   ]
