[Animations] Render animation selector in computed style widget
Before this CL, when the source of a property was an animation
style; we were showing the selector as `element.style`.

This CL updates it to show the animation's name correctly.

Bug: 349566291
Change-Id: I65df388edba022e9274c8cb23ede000a75eea53d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170708
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Changhao Han <changhaohan@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>

--- a/front_end/panels/elements/BUILD.gn
+++ b/front_end/panels/elements/BUILD.gn
@@ -156,6 +156,7 @@ ts_library("unittests") {
     "CSSRuleValidator.test.ts",
     "ClassesPaneWidget.test.ts",
     "ComputedStyleModel.test.ts",
+    "ComputedStyleWidget.test.ts",
     "DOMLinkifier.test.ts",
     "ElementStatePaneWidget.test.ts",
     "ElementsPanel.test.ts",
