Fix color picker not updating the color from custom property palette
When using the custom property palette in the color picker, the page
color isn't updated because the color picker sends along the color
"name" instead of its value, which isn't meaningful with custom property
palette values.

Fixed: 388193952
Change-Id: I8d84c910c9fe51a0f2a7e301c4bf146bdef09782
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6178272
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/front_end/panels/elements/BUILD.gn
+++ b/front_end/panels/elements/BUILD.gn
@@ -155,6 +155,7 @@ ts_library("unittests") {
     "AccessibilityTreeView.test.ts",
     "CSSRuleValidator.test.ts",
     "ClassesPaneWidget.test.ts",
+    "ColorSwatchPopoverIcon.test.ts",
     "ComputedStyleModel.test.ts",
     "ComputedStyleWidget.test.ts",
     "DOMLinkifier.test.ts",
