--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -39,6 +39,7 @@ ts_library("testing") {
     "SourceMapHelpers.ts",
     "StorageItemsViewHelpers.ts",
     "StubIssue.ts",
+    "StyleHelpers.ts",
     "TraceHelpers.ts",
     "TraceLoader.ts",
     "TrackAsyncOperations.ts",
