--- a/config/typescript/tsconfig.eslint.json
+++ b/config/typescript/tsconfig.eslint.json
@@ -14,6 +14,7 @@
     "../../front_end/**/*.ts",
     "../../inspector_overlay/**/*.ts",
     "../../scripts/protocol_typescript/*.ts",
-    "../../test/**/*.ts"
+    "../../test/**/*.ts",
+    "../../extensions/**/*.ts",
   ]
 }
