[ui] Switch dock toolbar in main menu to Lit.
Bug: 388445687
Change-Id: Ib97504b2bc3d7fffc4ee64d1c01f50cc7081bd36
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6187060
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/components/buttons/BUILD.gn
+++ b/front_end/ui/components/buttons/BUILD.gn
@@ -32,7 +32,9 @@ devtools_entrypoint("bundle") {
     ":legacy_css_files",
   ]
 
-  visibility = default_components_visibility
+  visibility = [ "../../../entrypoints/main/*" ]
+
+  visibility += default_components_visibility
 }
 
 ts_library("unittests") {
