--- a/front_end/ui/lit-html/BUILD.gn
+++ b/front_end/ui/lit-html/BUILD.gn
@@ -23,6 +23,7 @@ devtools_entrypoint("bundle") {
 
   visibility = [
     ":*",
+    "../../entrypoints/main/*",
     "../../panels/*",
     "../../testing/*",
     "../../ui/components/*",
