--- a/front_end/entrypoints/main/BUILD.gn
+++ b/front_end/entrypoints/main/BUILD.gn
@@ -31,10 +31,12 @@ devtools_module("main") {
     "../../models/workspace:bundle",
     "../../panels/snippets:bundle",
     "../../panels/timeline:bundle",
+    "../../ui/components/buttons:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/utils:bundle",
     "../../ui/legacy/theme_support:bundle",
+    "../../ui/lit-html:bundle",
     "../../ui/visual_logging:bundle",
   ]
 }
