[node_app] Show network panel as a preview panel in node_app/js_app
Design-doc: https://docs.google.com/document/d/1CmXzXt2bVD6Oy4wMakjJcc2ciry4GAAGSgHk4UuqLsE/edit?tab=t.0
Bug: 353924015
Change-Id: Icfc6b5a6448f17b0d30ea80835cefd8a001412a3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6185606
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/entrypoints/js_app/BUILD.gn
+++ b/front_end/entrypoints/js_app/BUILD.gn
@@ -15,6 +15,7 @@ devtools_entrypoint("entrypoint") {
     "../../generated:protocol",
     "../../panels/js_timeline:meta",
     "../../panels/mobile_throttling:meta",
+    "../../panels/network:meta",
     "../../ui/legacy/components/utils:bundle",
     "../main:bundle",
     "../shell",
