Autofreestyler: support perf examples
This CL updates the auto-run tool to support performance examples that
have an entry label annotation. The tool will now select that entry,
parse the prompt out of the HTML file, and execute the AI Assistance
against it.

The tool can find the metadata from the trace / HTML comments, and it is
able to download and import the trace into DevTools.

Most of the work here was in the downloading & metadata generation; the
actual AI execution is very similar, we just select an event in the Perf
Panel rather than inspect an element.

Bug: 383120286
Change-Id: I7d6ebff3a0577c46cb87c8fa57f1fbad6c475f44
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6172722
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ npm-debug.log
 /scripts/javascript_natives/node_modules
 /scripts/protocol_typescript/*.js
 /scripts/ai_assistance/data
+/scripts/ai_assistance/performance-trace-downloads
 
 /build
 /buildtools
