Use `<devtools-new-data-grid>` in `WebBundleInfoView`.
Bug: 390346490
Change-Id: Ie32bd92e44ed51e8c3d95fddd4f127cab3b4da96
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6187104
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/network/components/BUILD.gn
+++ b/front_end/panels/network/components/BUILD.gn
@@ -52,6 +52,7 @@ devtools_module("components") {
     "../../../ui/components/legacy_wrapper:bundle",
     "../../../ui/components/report_view:bundle",
     "../../../ui/legacy:bundle",
+    "../../../ui/legacy/components/data_grid:bundle",
     "../../../ui/lit-html:bundle",
     "../forward:bundle",
   ]
