Expose ::checkmark pseudo-element in devtools
Bug: 379805728
Change-Id: I8c6c478fe7bef0d93a50354ad450a9fd91c49ce5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170906
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Traian Captan <tcaptan@chromium.org>
Reviewed-by: Eric Leese <leese@chromium.org>

--- a/front_end/panels/elements/BUILD.gn
+++ b/front_end/panels/elements/BUILD.gn
@@ -162,6 +162,7 @@ ts_library("unittests") {
     "ElementStatePaneWidget.test.ts",
     "ElementsPanel.test.ts",
     "ElementsTreeElementHighlighter.test.ts",
+    "ElementsTreeOutline.test.ts",
     "InspectElementModeController.test.ts",
     "PlatformFontsWidget.test.ts",
     "PropertiesWidget.test.ts",
