Override `ShadowRoot.adoptedStyleSheets` to handle cross-document cases.
This also migrate the `<devtools-icon>`, `<devtools-toolbar>` and
`<devtools-button>` custom elements to use the new CSS approach
(instead of the legacy approach), since it works now, even across
multiple documents.

Bug: 391381439
Change-Id: I48c629c6073579051082dd1ca9360bb7d9cc30e2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6184803
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2193,7 +2193,7 @@ grd_files_debug_sources = [
   "front_end/ui/components/adorners/Adorner.js",
   "front_end/ui/components/adorners/adorner.css.js",
   "front_end/ui/components/buttons/Button.js",
-  "front_end/ui/components/buttons/button.css.legacy.js",
+  "front_end/ui/components/buttons/button.css.js",
   "front_end/ui/components/cards/Card.js",
   "front_end/ui/components/cards/card.css.js",
   "front_end/ui/components/chrome_link/ChromeLink.js",
@@ -2231,7 +2231,7 @@ grd_files_debug_sources = [
   "front_end/ui/components/icon_button/Icon.js",
   "front_end/ui/components/icon_button/IconButton.js",
   "front_end/ui/components/icon_button/fileSourceIcon.css.js",
-  "front_end/ui/components/icon_button/icon.css.legacy.js",
+  "front_end/ui/components/icon_button/icon.css.js",
   "front_end/ui/components/icon_button/iconButton.css.js",
   "front_end/ui/components/input/checkbox.css.js",
   "front_end/ui/components/input/textInput.css.js",
@@ -2502,7 +2502,7 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/themeColors.css.legacy.js",
   "front_end/ui/legacy/theme_support/ThemeSupport.js",
   "front_end/ui/legacy/tokens.css.legacy.js",
-  "front_end/ui/legacy/toolbar.css.legacy.js",
+  "front_end/ui/legacy/toolbar.css.js",
   "front_end/ui/legacy/treeoutline.css.legacy.js",
   "front_end/ui/legacy/viewContainers.css.legacy.js",
   "front_end/ui/lit-html/i18n-template.js",
