Inject `:root` styles (for CSS tokens) only once.
Instead of injecting our CSS tokens into every document and every shadow
root, which is unnecessary and only makes it more challenging to reason
about the cascade in DevTools, inject these `.css` files exactly once
via the entrypoints.

Bug: 391381439, 390330089
Change-Id: Id3eba5303f636bd47cf893934c8ec625339cd289
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6187530
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -34,7 +34,13 @@ group("front_end") {
 }
 
 copy_to_gen("integration_test_runner-gen") {
-  sources = [ "integration_test_runner.html" ]
+  sources = [
+    "application_color_tokens.css",
+    "design_tokens.css",
+    "integration_test_runner.html",
+    "theme_colors.css",
+    "tokens.css",
+  ]
 }
 
 group("integration_test_runner") {
