--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -290,6 +290,7 @@ grd_files_release_sources = [
   "front_end/Images/width.svg",
   "front_end/Images/zoom-in.svg",
   "front_end/Tests.js",
+  "front_end/application_color_tokens.css",
   "front_end/core/common/common.js",
   "front_end/core/dom_extension/dom_extension.js",
   "front_end/core/host/host.js",
@@ -301,6 +302,7 @@ grd_files_release_sources = [
   "front_end/core/root/root.js",
   "front_end/core/sdk/sdk-meta.js",
   "front_end/core/sdk/sdk.js",
+  "front_end/design_tokens.css",
   "front_end/device_mode_emulation_frame.html",
   "front_end/devtools_app.html",
   "front_end/devtools_compatibility.js",
@@ -672,6 +674,7 @@ grd_files_release_sources = [
   "front_end/services/trace_bounds/trace_bounds.js",
   "front_end/services/tracing/tracing.js",
   "front_end/services/window_bounds/window_bounds.js",
+  "front_end/theme_colors.css",
   "front_end/third_party/acorn/acorn.js",
   "front_end/third_party/chromium/client-variations/client-variations.js",
   "front_end/third_party/codemirror.next/chunk/angular.js",
@@ -703,6 +706,7 @@ grd_files_release_sources = [
   "front_end/third_party/third-party-web/third-party-web.js",
   "front_end/third_party/wasmparser/wasmparser.js",
   "front_end/third_party/web-vitals/web-vitals.js",
+  "front_end/tokens.css",
   "front_end/ui/components/adorners/adorners.js",
   "front_end/ui/components/buttons/buttons.js",
   "front_end/ui/components/cards/cards.js",
@@ -2360,7 +2364,6 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/XLink.js",
   "front_end/ui/legacy/XWidget.js",
   "front_end/ui/legacy/ZoomManager.js",
-  "front_end/ui/legacy/applicationColorTokens.css.legacy.js",
   "front_end/ui/legacy/checkboxTextLabel.css.legacy.js",
   "front_end/ui/legacy/components/color_picker/ColorFormatSpec.js",
   "front_end/ui/legacy/components/color_picker/ContrastDetails.js",
@@ -2469,7 +2472,6 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/utils/imagePreview.css.js",
   "front_end/ui/legacy/components/utils/jsUtils.css.js",
   "front_end/ui/legacy/confirmDialog.css.legacy.js",
-  "front_end/ui/legacy/designTokens.css.legacy.js",
   "front_end/ui/legacy/dialog.css.legacy.js",
   "front_end/ui/legacy/dropTarget.css.legacy.js",
   "front_end/ui/legacy/emptyWidget.css.js",
@@ -2499,9 +2501,7 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/targetCrashedScreen.css.legacy.js",
   "front_end/ui/legacy/textButton.css.legacy.js",
   "front_end/ui/legacy/textPrompt.css.legacy.js",
-  "front_end/ui/legacy/themeColors.css.legacy.js",
   "front_end/ui/legacy/theme_support/ThemeSupport.js",
-  "front_end/ui/legacy/tokens.css.legacy.js",
   "front_end/ui/legacy/toolbar.css.js",
   "front_end/ui/legacy/treeoutline.css.legacy.js",
   "front_end/ui/legacy/viewContainers.css.legacy.js",
