Move text-button styles to the button component.
This is the next step in unifying the way we inject CSS. While we should
probably have a proper `<devtools-text-button>` component instead of the
`.text-button` styles, I'm leaving that as a refactoring for later, and
for now, move the styles out of the legacy UI bundle and into the button
component.

Bug: 391381439
Change-Id: Id4708319dbfe2d609da0947ef9e3f7692723393b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6189456
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/components/buttons/BUILD.gn
+++ b/front_end/ui/components/buttons/BUILD.gn
@@ -8,8 +8,15 @@ import("../../../../scripts/build/ninja/generate_css.gni")
 import("../../../../scripts/build/typescript/typescript.gni")
 import("../visibility.gni")
 
-generate_css("legacy_css_files") {
-  sources = [ "button.css" ]
+generate_css("css_files") {
+  sources = [
+    "button.css",
+    "textButton.css",
+  ]
+}
+
+copy_to_gen("copy_stylesheets_for_server") {
+  sources = [ "textButton.css" ]
 }
 
 devtools_module("button") {
@@ -27,7 +34,7 @@ devtools_entrypoint("bundle") {
 
   deps = [
     ":button",
-    ":legacy_css_files",
+    ":css_files",
   ]
 
   visibility = [ "../../../entrypoints/main/*" ]
