--- a/front_end/ui/legacy/components/inline_editor/BUILD.gn
+++ b/front_end/ui/legacy/components/inline_editor/BUILD.gn
@@ -57,6 +57,7 @@ devtools_module("inline_editor") {
     "../../../../models/text_utils:bundle",
     "../../../../panels/css_overview:bundle",
     "../../../../third_party/codemirror.next:bundle",
+    "../../../../ui/components/buttons:bundle",
     "../../../../ui/components/helpers:bundle",
     "../../../../ui/legacy:bundle",
     "../../../../ui/legacy/components/utils:bundle",
