--- a/scripts/component_server/BUILD.gn
+++ b/scripts/component_server/BUILD.gn
@@ -7,5 +7,8 @@ import("../build/ninja/copy.gni")
 copy_to_gen("component_server") {
   sources = [ "server.js" ]
 
-  deps = [ "../../front_end/ui/legacy:copy_stylesheets_for_server" ]
+  deps = [
+    "../../front_end/ui/components/buttons:copy_stylesheets_for_server",
+    "../../front_end/ui/legacy:copy_stylesheets_for_server",
+  ]
 }
