--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2198,6 +2198,7 @@ grd_files_debug_sources = [
   "front_end/ui/components/adorners/adorner.css.js",
   "front_end/ui/components/buttons/Button.js",
   "front_end/ui/components/buttons/button.css.js",
+  "front_end/ui/components/buttons/textButton.css.js",
   "front_end/ui/components/cards/Card.js",
   "front_end/ui/components/cards/card.css.js",
   "front_end/ui/components/chrome_link/ChromeLink.js",
@@ -2499,7 +2500,6 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/suggestBox.css.legacy.js",
   "front_end/ui/legacy/tabbedPane.css.legacy.js",
   "front_end/ui/legacy/targetCrashedScreen.css.legacy.js",
-  "front_end/ui/legacy/textButton.css.legacy.js",
   "front_end/ui/legacy/textPrompt.css.legacy.js",
   "front_end/ui/legacy/theme_support/ThemeSupport.js",
   "front_end/ui/legacy/toolbar.css.js",
