front_end: Add missing dependency from legacy UI bundle on css_files
Follow-up to https://crrev.com/c/6184803; Toolbar.ts in the target "ui"
now depends on toolbar.css.js, not toolbar.css.legacy.js, but the former
is generated by the target "css_files" that was not specified as a
proper dependency.

Bug: 391381439
Change-Id: I1864edbbec24bf4805831db57ad021ff64357055
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6189463
Auto-Submit: Raphael Kubo da Costa <kubo@igalia.com>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/legacy/BUILD.gn
+++ b/front_end/ui/legacy/BUILD.gn
@@ -138,6 +138,7 @@ devtools_entrypoint("bundle") {
   entrypoint = "legacy.ts"
 
   deps = [
+    ":css_files",
     ":legacy_css_files",
     ":ui",
   ]
